Mi primera Pagina Web 13-04-2021

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h1>Jhon David Guevara Toloza</h1>
     <hr>
             <!-- (p>b{Edad: }+i{22})+(p>b{Altura: }+i{1.73})+(p>b{Tipo de usuario: }+i{Estudiante})+(p>b{Experiencia en html: }+i{Analista de pruebas})+(p>b{Como me entere del curso: }+i{Por medio de la empresa}) -->
-            (p>b{Edad: }+i{22})+(p>b{Altura: }+i{1.73})+(p>b{Tipo de usuario: }+i{Estudiante})+(p>b{Experiencia en html: }+i{Analista de pruebas})+(p>b{Como me entere del curso: }+i{Por medio de la empresa}
+            <p><b>Edad: </b><i>22</i></p>
+            <p><b>Altura: </b><i>1.73</i></p>
+            <p><b>Tipo de usuario: </b><i>Estudiante</i></p>
+            <p><b>Experiencia en html: </b><i>Analista de pruebas</i></p>
+            <p><b>Como me entere del curso: </b><i>Por medio de la empresa</i></p>
 
     
 </body>
